--- a/templates/home.html
+++ b/templates/home.html
@@ -15,13 +15,13 @@
   class='body-container body-container--home'
 %}
 
-
   {# Hero banner #}
 
   {% include_dnd_partial path='../sections/home-hero.html' %}
     
+  {# Call to action #}
+
   {% include_dnd_partial path='../sections/call-to-action.html' %}
-    
 
   {# Two column image right #}
 
@@ -31,7 +31,7 @@
 
   {% include_dnd_partial path='../sections/multi-column-content.html' %}
 
-   {# Two column content #}
+  {# Two column content #}
 
   {% include_dnd_partial path='../sections/overlapping-split-grid.html' %}
 
@@ -42,9 +42,6 @@
   {# Our Partners and Supporters #}
 
   {% include_dnd_partial path='../sections/our-partners.html' %}
-
-  {# Two column image left #}
-
 
 {% end_dnd_area %}
 {% endblock body %}
