--- a/templates/system/backup-unsubscribe.html
+++ b/templates/system/backup-unsubscribe.html
@@ -1,7 +1,7 @@
 <!--
   templateType: email_backup_unsubscribe_page
   isAvailableForNewContent: true
-  label: Mosaic - email backup unsubscribe
+  label: Email Backup Unsubscribe
   screenshotPath: ../../images/template-previews/backup-unsubscribe.png
 -->
 {% set template_css = '../../css/templates/system.css' %}
