--- a/templates/system/password-prompt.html
+++ b/templates/system/password-prompt.html
@@ -1,7 +1,7 @@
 <!--
   templateType: password_prompt_page
   isAvailableForNewContent: true
-  label: Mosaic - password prompt
+  label: Password Prompt
   screenshotPath: ../../images/template-previews/password-prompt.png
 -->
 {% set template_css = '../../css/templates/system.css' %}
@@ -17,14 +17,14 @@
         path='@hubspot/rich_text',
         html='<h1 style="text-align: center;">Password Required</h1><h3 style="text-align: center;">Please enter the password to view this page.</h3>'
       %}
-        <div class="password-prompt-form">
+      <div class="password-prompt-form">
         {% module 'password_prompt'
           extra_classes='password-prompt',
           path='@hubspot/password_prompt',
           submit_button_text = "Login"
         %}
-        </div>
       </div>
+    </div>
   </div>
 </section>
 {% endblock body %}
