--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -29,21 +29,8 @@
       }
     }
   %}
-    {% dnd_column padding={
-      'default': {
-        'top': 0,
-        'right': 0,
-        'bottom': 0,
-        'left': 0
-      },
-      'mobile': {
-        'top': 0,
-        'right': 0,
-        'bottom': 0,
-        'left': 0
-      }
-    }%}
-      {% dnd_row padding={
+    {% dnd_column 
+      padding={
         'default': {
           'top': 0,
           'right': 0,
@@ -56,8 +43,28 @@
           'bottom': 0,
           'left': 0
         }
-      }%}
-        {% dnd_column offset=0, width=6 %}
+      }
+    %}
+      {% dnd_row 
+        padding={
+          'default': {
+            'top': 0,
+            'right': 0,
+            'bottom': 0,
+            'left': 0
+          },
+          'mobile': {
+            'top': 0,
+            'right': 0,
+            'bottom': 0,
+            'left': 0
+          }
+        }
+      %}
+        {% dnd_column 
+          offset=0, 
+          width=6 
+        %}
           {% dnd_row %}
             {% dnd_module
               path='@hubspot/rich_text',
@@ -66,7 +73,10 @@
             {% end_dnd_module %}
           {% end_dnd_row %}
         {% end_dnd_column %}
-        {% dnd_column offset=6, width=6 %}
+        {% dnd_column 
+          offset=6, 
+          width=6 
+        %}
           {% dnd_row %}
             {% dnd_module path='@hubspot/form' %}
             {% end_dnd_module %}
