--- a/templates/system/subscription-preferences.html
+++ b/templates/system/subscription-preferences.html
@@ -1,7 +1,7 @@
 <!--
   templateType: email_subscription_preferences_page
   isAvailableForNewContent: true
-  label: Mosaic - email subscription preferences
+  label: Email Subscription Preferences
   screenshotPath: ../../images/template-previews/subscription-preferences.png
 -->
 {% set template_css = '../../css/templates/system.css' %}
