--- a/templates/system/subscriptions-confirmation.html
+++ b/templates/system/subscriptions-confirmation.html
@@ -1,7 +1,7 @@
 <!--
   templateType: email_subscriptions_confirmation_page
   isAvailableForNewContent: true
-  label: Mosaic - email subscriptions confirmation
+  label: Email Subscriptions Confirmation
   screenshotPath: ../../images/template-previews/subscriptions-confirmation.png
 -->
 {% set template_css = '../../css/templates/system.css' %}
@@ -18,7 +18,7 @@
           path='@hubspot/email_subscriptions_confirmation',
           subheader_text = "<h3 class='confirmation-subheader_text'>If this is not your email address, please ignore this page since the email associated with this page was most likely forwarded to you.</h3>"
         %}
-        </div>
+      </div>
     </div>
   </div>
 </section>
