--- a/css/elements/_typography.css
+++ b/css/elements/_typography.css
@@ -1,5 +1,5 @@
 body {
-  color: var(--theme-black);
+  color: var(--theme-emperor-gray);
   font-family: var(--font-family), sans-serif;
   font-size: var(--body-font-size);
   line-height: var(--body-line-height);
