--- a/templates/donate.html
+++ b/templates/donate.html
@@ -16,17 +16,18 @@
 %}
 
   {# Hero banner #}
-  {% include_dnd_partial path='../sections/internal-page-hero.html'
+  {% include_dnd_partial 
+    path='../sections/internal-page-hero.html'
     context={
     'content': '<h1 style="text-align: center;">Donate Now</h1><p style="text-align: center;">We’re a nonprofit, nonpartisan organization with amazing volunteers nationwide. Our solution to climate change? Democracy. And we need you on our team.</p>',
     } 
   %}
   {% dnd_section     
     background_color={
-    r: 245,
-    g: 245,
-    b: 245,
-    a: 1.0
+      r: 245,
+      g: 245,
+      b: 245,
+      a: 1.0
     } 
   %}
 
@@ -83,7 +84,8 @@
         {% end_dnd_module %}
       {% end_dnd_row %}
       {% dnd_row %}
-        {% dnd_module path='../modules/three-column-image-grid',
+        {% dnd_module 
+          path='../modules/three-column-image-grid',
           image_grid_item=[
             {
               "image_field": { "src": "{{ get_asset_url('../images/donate/butterfly.jpg') }}", 'alt': 'Butterfly'},
