feat(blog): add hero image context

--- a/templates/blog-index.html
+++ b/templates/blog-index.html
@@ -18,6 +18,7 @@
     path='../sections/internal-page-hero.html'  
     context={
     'content': '<h1 style="text-align: center;">News</h1><p style="text-align: center;">We’re a nonprofit, nonpartisan organization with amazing volunteers nationwide. Our solution to climate change? Democracy. And we need you on our team.</p>',
+    "hero_background_image": "{{ get_asset_url('../images/blog-hero-image.jpg')}}"
     }
   %}
 
