feat(templates): add hero image context

--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
     path='../sections/internal-page-hero.html'
     context={
       'content': '<h1 style="text-align: center;">About Us</h1><p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Et dolore magna aliqua. Ut enim ad minim veniam.</p>',
-      'hero_background_image': { "src": "{{ get_asset_url('../images/about-hero.jpg') }}", 'alt': 'About Us Hero Image'}
+      "hero_background_image": "{{ get_asset_url('../images/about-hero.jpg')}}"
     } 
   %}
 
