feat(templates): add hero image context

--- a/templates/donate.html
+++ b/templates/donate.html
@@ -19,9 +19,11 @@
   {% include_dnd_partial 
     path='../sections/internal-page-hero.html'
     context={
-    'content': '<h1 style="text-align: center;">Donate Now</h1><p style="text-align: center;">We’re a nonprofit, nonpartisan organization with amazing volunteers nationwide. Our solution to climate change? Democracy. And we need you on our team.</p>',
+      'content': '<h1 style="text-align: center;">Donate Now</h1><p style="text-align: center;">We’re a nonprofit, nonpartisan organization with amazing volunteers nationwide. Our solution to climate change? Democracy. And we need you on our team.</p>',
+      "hero_background_image": "{{ get_asset_url('../images/donate/donate-hero.jpg')}}"
     } 
   %}
+}
   {% dnd_section     
     background_color={
       r: 245,
