--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -207,6 +207,17 @@
             %}
             {% end_dnd_module %}
           {% end_dnd_row %}
+          {% dnd_row %}
+            {% dnd_module 
+              path='../modules/link-with-icon.module',
+              text = "Learn how you can help"; 
+              text_color= {
+                "color": "#ffffff",
+                "opacity": 100 
+              } 
+            %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
         {% end_dnd_column %}
 
         {% dnd_column
