fix(templates): update context content

--- a/templates/donate.html
+++ b/templates/donate.html
@@ -99,12 +99,12 @@
   {% include_dnd_partial path='../sections/three-column-image-grid.html',
     context={
     'image_1': "{{ get_asset_url('../images/donate/butterfly.jpg')}}",
-    'image_2': "{{ get_asset_url('../images/donate/lake.jpg')}}",
-    'image_3': "{{ get_asset_url('../images/donate/nature.jpg')}}",
+    'image_2': "{{ get_asset_url('../images/donate/tree.jpg')}}",
+    'image_3': "{{ get_asset_url('../images/donate/windmill.jpg')}}",
     'image_4': "{{ get_asset_url('../images/donate/sea-turtle.jpg')}}",
-    'image_5': "{{ get_asset_url('../images/donate/tree.jpg')}}",
-    'image_6': "{{ get_asset_url('../images/donate/windmill.jpg')}}",
-    "caption": '<p>Image Title<br>Image Caption</p>'
+    'image_5': "{{ get_asset_url('../images/donate/nature.jpg')}}",
+    'image_6': "{{ get_asset_url('../images/donate/lake.jpg')}}",
+    "donate_caption": '<p>Lorem Ipsum Lorem Ipsum<br>The bipartisan infrastructure bill can help fight climate change and protect other resources that support all life on earth.</p>'
     } 
   %}
 {% end_dnd_area %}
