--- a/modules/action-center.module/module.css
+++ b/modules/action-center.module/module.css
@@ -1,6 +1,8 @@
 .button-row {
+  display: flex;
+  flex-wrap: wrap;
   padding: 20px 40px;
-  margin: 0 auto; 
+  margin: 0 auto;
 }
 
 .button-row a {
@@ -9,19 +11,12 @@
 }
 
 .button-column {
-  display: inline-block;
-  width: 19%;
+  width: 20%;
   padding: 40px 0;
-}
-
-.button-column:nth-child(5n) {
-  page-break-after: always; /* CSS 2.1 syntax */
-  break-after: always; /* New syntax */
 }
 
 @media only screen and (max-width: 1080px) {
   .button-column {
-    display: inline-block;
     width: 30%;
     padding: 40px 0;
   }
@@ -29,12 +24,10 @@
 
 @media only screen and (max-width: 768px) {
   .button-row {
-    display: block;
     padding: 20px;
   }
   .button-column {
     width: 100%;
     text-align: center;
   }
-
 }
