--- a/modules/partner-logos.module/module.css
+++ b/modules/partner-logos.module/module.css
@@ -1,16 +1,23 @@
 .logos {
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   margin: 0 auto;
 }
 .logo {
-  float: left;
   width: 20%;
-  padding: 50px 0;
+  padding: 50px 20px;
+}
+
+.logo img {
+  max-width: 100% !important;
+  height: 100%;
+  object-fit: contain;
 }
 
 @media only screen and (max-width: 768px) {
   .logo {
-    clear: both;
     width: 100%;
     padding: 20px 0;
   }
